--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                             <h3 class="card-title"><a href="" >Deep and Reinforcement Learing for SARS-CoV-2 Evolution Prediction</a></h3>
                             <div class="card-excerpt">
                                 <ul>
-                                    <li><p>123</p></li>
-                                    <li><p>123</p></li>
-                                    <li><p>123</p></li>
-                                    <li><p>Code and data are available on <a href="">Github</a>.</p></li>
+                                    <li><p>A new evolutionary analysis method of COVID-19</p></li>
+                                    <li><p>A reinforcement learning based self game sequence optimization method</p></li>
+                                    <li><p>Modeling method based on RetNet network architecture and pre trained model</p></li>
+                                    <li><p>Code and data are available on <a href="https://github.com/zjhubio/DARSEP">Github</a>.</p></li>
                                 </ul>
                             </div>
                             <div class="card-horizontal-meta">
