--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                         </div>
                     </div>
                 </div>
-
             </div>
+            <span id="finicount_views"></span>
         </main>
         <!-- FOOTER -->
         <footer id="eskimo-footer">
@@ -125,6 +125,7 @@
     <script src="js/panel.js"></script>
     <script src="js/reading-position-indicator.js"></script>
     <script src="js/custom.js"></script>
+    <script async src="//finicounter.eu.org/finicounter.js"></script>
     <!-- POST SLIDER -->
     <script>
         (function($) {
