--- a/downstream.html
+++ b/downstream.html
@@ -70,7 +70,7 @@
                                         </ul>
                                     </li>
 									<li><a href="downstream.html">DOWNSTREAM Analysis</a></li>
-                                    <li><a href="aboutus.html">About Us</a></li>
+                                    <li><a href="contactus.html">Contact Us</a></li>
                                 </ul>
                             </nav>
                         </div>
