--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                         </ul>
                                     </li>
 									<li><a href="downstream.html">Downstream Analysis</a></li>
-                                    <li><a href="aboutus.html">About Us</a></li>
+                                    <li><a href="contactus.html">Contact Us</a></li>
                                 </ul>
                             </nav>
                         </div>
