--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="card-horizontal-left">
                             <div class="card-category" style="text-transform: none;">
                                 <i class="fa fa-info-circle" style="font-size: 20px;"/></i><a href="" style="font-size: 20px;margin-left: 1%;">Introduction</a> </div>
-                            <h3 class="card-title"><a href="" >Antigenic variation and evolution analysis of SARS-CoV-2 using self-game sequence optimization(DARSEP)</a></h3>
+                            <h3 class="card-title"><a href="" >Variation and evolution analysis of SARS-CoV-2 using self-game sequence optimization(DARSEP)</a></h3>
                             <div class="card-excerpt">
                                 <ul>
                                     <li><p>A new evolutionary analysis method of SARS-CoV-2.</p></li>
