--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <i class="fa fa-reorder" style="font-size: 20px;"/></i><a href="" style="font-size: 20px;margin-left: 1%;">Guide</a> </div>
                             <div class="card-excerpt">
                                 <ul>
-                                    <li><p>The homepage provides a brief introduction to the content and innovation of DASEP, the website's usage guide, and the architecture diagram of DARSEP.</p></li>
+                                    <li><p>The homepage provides a brief introduction to the content and innovation of DARSEP, the website's usage guide, and the architecture diagram of DARSEP.</p></li>
                                     <li><p>In the Data Analysis section, you can view the statistical analysis of virus related attribute data from various perspectives.</p></li>
                                     <li><p>In the Model Analysis section, you can observe model training results.</p></li>
 									<li><p>In the Downstream Analysis section, you can calculate the fitness of sequence, do cluster analysis, construct evolutionary fields,etc.</p></li>
