--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                     <li><p>In the Data Analysis section, you can view the statistical analysis of virus related attribute data from various perspectives.</p></li>
                                     <li><p>In the Model Analysis section, you can observe model training results.</p></li>
 									<li><p>In the Downstream Analysis section, you can calculate the fitness of sequence, do cluster analysis, construct evolutionary fields,etc.</p></li>
-                                    <li><p>In the About Us chapter, review the team introduction and related research findings.</p></li>
+                                    <li><p>In the Contact Us section, you can review the contact information.</p></li>
                                 </ul>
                             </div>
                         </div>
