--- a/fitness.html
+++ b/fitness.html
@@ -122,7 +122,7 @@
                                             <img class="card-vertical-img" src="images/img13.png" style="background-color:white" alt="" />   
                                         </a>
                                     </div>
-                                        <h6 style="text-align: center;">The trimeric three-dimensional open structure of spike protein</h6>
+                                        <h6 style="text-align: center;">The structure of the SARS-CoV-2 spike ectodomain (6VYB)</h6>
                                 </div>
                                 <!-- POST 2 -->
                                 <div class="card-masonry">
@@ -131,7 +131,7 @@
                                             <img class="card-vertical-img" src="images/img14.png" style="background-color:white"  alt="" />   
                                         </a>
                                     </div>
-                                        <h6 style="text-align: center;">Three dimensional structure of RBD/ACE2 complex</h6>
+                                        <h6 style="text-align: center;">The 3D structure of the RBD/ACE2 complex</h6>
                                 </div>
                                 <!-- POST 3 -->
                                 <div class="card-masonry">
@@ -140,7 +140,7 @@
                                             <img class="card-vertical-img" src="images/img15.png" style="background-color:white"  alt="" />   
                                         </a>
                                     </div>
-                                        <h6 style="text-align: center;">Heat map of fitness changes caused by the mutation of some RBD region sites into different amino acids</h6>
+                                        <h6 style="text-align: center;">A heat map illustrating fitness variations resulting from mutations at specific RBD region sites to different amino acids</h6>
                                 </div>
                             </div>
                         </div>
