--- a/model.html
+++ b/model.html
@@ -86,7 +86,7 @@
                                         <h3 class="card-title">
                                             <a href="">Comparison of Prediction Structures</a>
                                         </h3>
-                                        <p style="text-align:justify">3D structure of one of the sequences in the set of optimised sequences of the RBD. 3D structure of the wild-type sequences.3D structure of the most similar sequences in the multiple sequence comparison.</p>
+                                        <p style="text-align:justify">3D structure of one of the sequences in the set of optimized sequences of the RBD. 3D structure of the wild-type sequences.3D structure of the most similar sequences in the multiple sequence alignment.</p>
                                     </div>
                                 </div>
                             </div>
@@ -106,7 +106,7 @@
                                             <a href="">Regression Analysis</a>
 											<a href="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                                         </h3>
-                                        <p style="text-align:justify">Regression correlation between the predicted fitness of the model for the generated optimised sequences and the predicted fitness calculated after generating the sequence.</p>
+                                        <p style="text-align:justify">Regression correlation between the predicted fitness of the model for the generated optimized sequences and the predicted fitness calculated after generating the sequence.</p>
                                     </div>
                                 </div>
                             </div>
@@ -140,7 +140,7 @@
                                          <h3 class="card-title">
                                              <a href="single-post.html">Experiments Comparing DARSEP with Other Models</a>
                                         </h3>
-                                        <p>Comparison of the performance of different models for amino acid sequence mask training, including serial vs. parallel for DARSEP internal modules and other models.</p>
+                                        <p>Comparison of the performance of different models for viral sequence mask training, including DARSEP, Sars-escape network, Flowformer, AminoBert, gMLP, CSCS, GTP2.</p>
                                     </div>
 
                                 </div>
