--- a/downstream.html
+++ b/downstream.html
@@ -189,7 +189,7 @@
                     </div>
 					<div class="tab-pane fade " id="mp-tab-5" role="button" aria-expanded="false">
                         <h3>Epidemic Strain Analysis</h3>
-						<p style="text-align:justify">Semantic syntax analysis of epidemic strain.This function calculates the relevant locations of Vocs from the perspective of semantic syntax, and thus analyses the loci that are likely to undergo immune escape.Here we provide two examples of Vocs analyses.If you have your own data that you would like to analyse, please contact us according to the contact information on the <b>"Contact Us"</b> page. If the resultant image does not display properly, please try clearing your browser cache.</p>
+						<p style="text-align:justify">Semantic syntax analysis of epidemic strain.This function calculates the relevant locations of Vocs (variants of concerns) through semantic and syntactic changes, and thus analyses the loci that are likely to undergo immune escape.Here we provide two examples of Vocs analyses.If you have your own data that you would like to analyse, please contact us according to the contact information on the <b>"Contact Us"</b> page. If the resultant image does not display properly, please try clearing your browser cache.</p>
 						<select id="vocs">
 							<option value="5">Omicron BA.1</option>
 							<option value="6">Omicron EG.5</option>
