--- a/install.html
+++ b/install.html
@@ -58,7 +58,7 @@
                 <div class="clearfix"></div>
 
                 <h2>Local Installation & Usage</h2>
-                <p style="text-align: justify;">In order to maximise the user experience, we have prepared a convenient local installation package with a detailed installation and operation guide to ensure that users can easily complete the installation and get started immediately. The following content will guide you through the entire process.</p>
+                <p style="text-align: justify;">In order to maximize the user experience, we have prepared a convenient local installation package with a detailed installation and operation guide to ensure that users can easily complete the installation and get started for use immediately. The following content will guide you through the entire process.</p>
 				<h5>Pre-installation Preparation</h5>
 				<ul>
 					<li>First of all, please prepare a pristine python environment.</li>
@@ -75,7 +75,7 @@
 				<p></p>
 				<ul>
 					<li>DARSEP-SPRLM</li>
-					<div style="text-align: justify;">The DARSEP-SPRLM method aims to optimise the sequences using reinforcement learning, after running it will get the optimised sequences as well as the values of the predicted fitness, which will be saved to a csv file, which can be implemented by running the following code:</div>
+					<div style="text-align: justify;">The DARSEP-SPRLM method aims to optimize the sequences using reinforcement learning, after running it will get the optimized sequences as well as the values of the predicted fitness, which will be saved to a csv file, which can be implemented by running the following code:</div>
 					<code>from DARSEP import DARSEP_SPRLM</code><br>
 					<code>DARSEP_SPRLM.selfPlay()</code>
 					<p></p>
