--- a/install.html
+++ b/install.html
@@ -95,7 +95,7 @@
 					<code>from DARSEP import DARSEP_PMLM</code><br>
 					<code>DARSEP_SPRLM.MissenseAnalysis()</code>
 					<p></p>
-					<div style="text-align: justify;">4. Grammatical semantic analysis: Users can analyze the changes in the semantic syntax of a particular SRAS-CoV-2 according to its mutation site invocation method as follows:</div>
+					<div style="text-align: justify;">4. Grammatical and semantic analysis: Users can analyze the changes in the semantic syntax of a particular SRAS-CoV-2 according to its mutation site invocation method as follows:</div>
 					<code>from DARSEP import DARSEP_PMLM</code><br>
 					<code>DARSEP_SPRLM.vocs(mutations)</code>
 					<div>Suggested input format for mutations: ['G339D','S371L','S373P','S375F','K417N','N440K','G446S','S477N','T478K','E484A','Q493R','G496S','Q498R','N501Y','Y505H']</div>
