--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <ul>
                                     <li><p>A new evolutionary analysis method of SARS-CoV-2.</p></li>
                                     <li><p>A reinforcement learning based self-game sequence optimization method.</p></li>
-                                    <li><p>Modeling method based on RetNet network architecture and pre-trained model.</p></li>
+                                    <li><p>Modeling method based on RetNet network architecture and pre-trained model ESM2.</p></li>
                                     <li><p>Code and data are available on <a href="https://github.com/zjhubio/DARSEP">Github</a>.</p></li>
                                 </ul>
                             </div>
