--- a/downstream.html
+++ b/downstream.html
@@ -120,7 +120,7 @@
                     <!-- TAB 1 -->
                     <div class="tab-pane fade active show" id="mp-tab-1" role="button" aria-expanded="true">
                         <h3>Fitness Calculation</h3>
-                        <p style="text-align:justify">Enter the RBD amino acid sequence in the input box below and calculate the sequence fitness.The data in the text box is sample data. Please input the <b>RBD sequence</b> according to the format of the sample data.The RBD sequence is an amino acid sequence that starts with "RVQ" and ends with "CVNF".</p>
+                        <p style="text-align:justify">Enter the RBD amino acid sequence in the input box below and calculate the sequence fitness. The data in the text box is sample data. Please input the <b>RBD sequence</b> according to the format of the sample data. The RBD sequence is an amino acid sequence that starts with "RVQ" and ends with "CVNF".</p>
 						<p><textarea id="rbdsequence" name="rbdsequence" cols="45" rows="8" required="required"></textarea></p>
 						<input type="submit" value="Submit" onclick='calculateFitness()'/>
 						<input type="submit" value="clear " onclick='cleartext()'/>
@@ -136,7 +136,7 @@
                     <!-- TAB 2 -->
                     <div class="tab-pane fade " id="mp-tab-2" role="button" aria-expanded="false">
                         <h3>Clustering Analysis</h3>
-                        <p style="text-align:justify">Cluster analysis is performed based on the dataset provided in the drop-down box.The input file type is in. fasta format, where the download address for training dataset is as follows, and the download address for the collection of training dataset and optimized dataset is as follows. If you have your own dataset that you want to analyze, please contact us according to the contact information on the contact us page.<b>If the result image does not display properly, please try clearing the browser cache.</b></p>
+                        <p style="text-align:justify">Cluster analysis is performed based on the dataset provided in the drop-down box. The input file type is in fasta format, where the download address for training dataset is as follows, and the download address for the collection of training dataset and optimized dataset is as follows. If you have your own dataset that you want to analyze, please contact us according to the contact information on the contact us page. <b>If the result image does not display properly, please try clearing the browser cache.</b></p>
                         <p>training dataset download: https://drive.google.com/file/d/18b7aQTSgrO9a9rjFTrTHBjmUY8-sOWwH/view?usp=sharing</p>
 						<p>training and optimized  dataset download: https://drive.google.com/file/d/1MfqtXk6lT1EEzqRsyAKWXHyaPdRC_cdg/view?usp=drive_link</p>
 						<select id="trainingset">
@@ -158,7 +158,7 @@
                     <!-- TAB 3 -->
                     <div class="tab-pane fade " id="mp-tab-3" role="button" aria-expanded="false">
                         <h3>Constructing Evolutionary Fields</h3>
-                        <p style="text-align:justify">Constructing Evolutionary Fields are performed based on the dataset provided in the drop-down box.The input file type is in. fasta format, where the download address for training dataset is as follows, and the download address for the collection of training dataset and optimized dataset is as follows. If you have your own dataset that you want to analyze, please contact us according to the contact information on the contact us page.<b>If the result image does not display properly, please try clearing the browser cache.</b></p>
+                        <p style="text-align:justify">Constructing Evolutionary Fields are performed based on the dataset provided in the drop-down box.The input file type is in fasta format, where the download address for training dataset is as follows, and the download address for the collection of training dataset and optimized dataset is as follows. If you have your own dataset that you want to analyze, please contact us according to the contact information on the contact us page. <b>If the result image does not display properly, please try clearing the browser cache.</b></p>
                         <p>training dataset download: https://drive.google.com/file/d/18b7aQTSgrO9a9rjFTrTHBjmUY8-sOWwH/view?usp=sharing</p>
 						<p>training and optimized  dataset download: https://drive.google.com/file/d/1MfqtXk6lT1EEzqRsyAKWXHyaPdRC_cdg/view?usp=drive_link</p>
 						<select id="trainingdataset">
@@ -189,7 +189,7 @@
                     </div>
 					<div class="tab-pane fade " id="mp-tab-5" role="button" aria-expanded="false">
                         <h3>Epidemic Strain Analysis</h3>
-						<p style="text-align:justify">Semantic syntax analysis of epidemic strain.This function calculates the relevant locations of Vocs (variants of concerns) through semantic and syntactic changes, and thus analyses the loci that are likely to undergo immune escape.Here we provide two examples of Vocs analyses.If you have your own data that you would like to analyse, please contact us according to the contact information on the <b>"Contact Us"</b> page. If the resultant image does not display properly, please try clearing your browser cache.</p>
+						<p style="text-align:justify">Semantic syntax analysis of epidemic strain. This function calculates the relevant locations of Vocs (variants of concerns) through semantic and syntactic changes, and thus analyses the loci that are likely to undergo immune escape. Here we provide two examples of Vocs analyses. If you have your own data that you would like to analyze, please contact us according to the contact information on the <b>"Contact Us"</b> page. If the resultant image does not display properly, please try clearing your browser cache.</p>
 						<select id="vocs">
 							<option value="5">Omicron BA.1</option>
 							<option value="6">Omicron EG.5</option>
